--- a/ServerApplication/src/main/resources/application.properties
+++ b/ServerApplication/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=199608155srz
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
